Simplify the About screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,6 +318,7 @@
 
     <string name="about_setting">Setting</string>
     <string name="about_sync">Sync Bands</string>
+    <string name="about_copyright">Copyright</string>
 
     <!-- Error Strings -->
     <string name="error_no_internet">Cannot connect to the Internet.</string>
