--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,5 +455,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="storymap_viewer_username">Caregiver name</string>
     <string name="storymap_viewer_info">2 miles from you</string>
+    <string name="geostory_meta_edit_save">Save Info</string>
+    <string name="geostory_meta_edit_dismiss">Dismiss</string>
 
 </resources>
