--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -460,6 +460,8 @@
     <string name="geostory_meta_edit_dismiss">Dismiss</string>
     <string name="home_name">Home</string>
     <string name="geostory_shared_toast">Your story has been shared. The staff will review your story before making it available to other families.</string>
+    <string name="geostory_shared_confirmation_text">Your story has been shared!</string>
+    <string name="geostory_shared_confirmation_information">After we review the story, it will be available in the Map tab for other families to listen to.\n\nSwipe left to continue.</string>
     <string name="sharing_location_marker_title">We offset the location to protect your privacy.</string>
     <string name="title_edit_geostory_meta">Edit Story Info</string>
 
