--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -479,4 +479,5 @@
     <string name="child_mood_angry">Angry</string>
     <string name="statement_button_next">Next</string>
 
+    <string name="default_bio_template">I\'m about %1$d years old. I have %2$s. My hobby is %3$s.</string>
 </resources>
