Add the initial codes to modify geostory icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -480,4 +480,5 @@
     <string name="statement_button_next">Next</string>
 
     <string name="default_bio_template">I\'m about %1$d years old. I have %2$s. My hobby is %3$s.</string>
+    <string name="geostory_save_metadata">Save</string>
 </resources>
