--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -488,7 +488,8 @@
     <string name="geostory_similarity_low">Average steps is slightly similar to you</string>
     <string name="geostory_similarity_moderate">Average steps is similar to you</string>
     <string name="geostory_similarity_high">Average steps is very similar to you</string>
-    <string name="geostory_no_like_text">Be the first to like this story.</string>
+    <string name="geostory_no_like_text">Be the first to react to this story.</string>
+    <string name="button_geostory_reaction">Give reaction</string>
 
     <string name="child_mood_happy">Happy</string>
     <string name="child_mood_sad">Sad</string>
