--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -489,7 +489,7 @@
     <string name="geostory_similarity_moderate">Average steps is similar to you</string>
     <string name="geostory_similarity_high">Average steps is very similar to you</string>
     <string name="geostory_no_like_text">Be the first to react to this story.</string>
-    <string name="button_geostory_reaction">Give a reaction</string>
+    <string name="button_geostory_reaction">Share a reaction</string>
     <string name="geostory_zero_user_zero_others_reaction">Be the first to react to this story.</string>
     <string name="geostory_zero_user_one_others_reaction">Tap to see a reaction from one family.</string>
     <string name="geostory_zero_user_many_others_reaction">Tap to see the reactions from %1$d families.</string>
