--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,6 +120,10 @@
     <string name="notification_announcements_channel_name">Announcements</string>
     <string name="notification_announcements_channel_desc">Updates about the Storywell app.</string>
 
+    <string name="notification_updates_channel_id">Updates</string>
+    <string name="notification_updates_channel_name">Story updates</string>
+    <string name="notification_updates_channel_desc">Updates interactions in the Storywell app.</string>
+
     <string name="notification_battery_low_title">Low battery</string>
     <string name="notification_person_battery_low">Charge %s\'s fitness band for 1 hour.</string>
     <string name="notification_people_battery_low">Charge %s and %s\'s fitness bands for 1 hour.</string>
