Remodel the mood logger so that adults's positive emotions are on the left and negative emotions are on the right

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -482,7 +482,7 @@
     <string name="geostory_start_subtext">Tap to see what\'s inside.</string>
     <string name="geostory_sharing_button_next">Next </string>
     <string name="geostory_posted_time_default">A few seconds ago</string>
-    <string name="mood_picker_child_prompt">Child, how do you feel right now?</string>
+    <string name="mood_picker_child_prompt">This is for the child.\nHow do you feel right now?</string>
     <string name="geostory_instruction_text">%1$s, can you tell a story using the prompt below? Connecting the book\'s story with your own story can help your child\'s reading skills.</string>
     <string name="caregiver_default_name">Caregiver</string>
     <string name="geostory_found_info">You found a new story!</string>
