--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -511,7 +511,7 @@
     <string name="child_mood_angry">Angry</string>
     <string name="statement_button_next">Next</string>
 
-    <string name="default_bio_template">I\'m about %1$d years old. I have %2$s. My hobby is %3$s.</string>
+    <string name="default_bio_template">I\'m in my %1$ds. I have %2$s. My hobby is %3$s.</string>
     <string name="geostory_save_metadata">Save</string>
     <string name="the_end">The End</string>
     <string name="the_end_congrats">You\'ve completed this story!</string>
