Change the instruction text in the story cover's View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
 
     <!-- Strings related to StoryView -->
     <string name="story_view_cover_locked">This book is locked for now. Complete fitness challenges to unlock more books.</string>
-    <string name="story_view_cover_navigation_tip">Swipe left to see the next page. Make sure you find the secret envelope!</string>
+    <string name="story_view_cover_navigation_tip">Swipe left to read the next page. You might find a secret envelope!</string>
 
 
     <!-- Strings related to Reflections -->
